shared/src/test/data/yeast/invalid-json/map-in-map.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'definitions'
Indicator          16,  2, 14 '\"'
EndScalar          17,  2, 15 ''
Indicator          17,  2, 15 ':'
WhiteSpace         18,  2, 16 ' '
BeginMapping       19,  2, 17 '{'
LineBreak          20,  2, 18 '\n'
WhiteSpace         21,  3,  0 '    '
BeginScalar        25,  3,  4 ''
Indicator          25,  3,  4 '\"'
Text               26,  3,  5 'RestEntity'
Indicator          36,  3, 15 '\"'
EndScalar          37,  3, 16 ''
Indicator          37,  3, 16 ':'
WhiteSpace         38,  3, 17 ' '
BeginMapping       39,  3, 18 '{'
LineBreak          40,  3, 19 '\n'
WhiteSpace         41,  4,  0 '      '
BeginScalar        47,  4,  6 ''
Indicator          47,  4,  6 '\"'
Text               48,  4,  7 'type'
Indicator          52,  4, 11 '\"'
EndScalar          53,  4, 12 ''
Indicator          53,  4, 12 ':'
WhiteSpace         54,  4, 13 ' '
BeginScalar        55,  4, 14 ''
Indicator          55,  4, 14 '\"'
Text               56,  4, 15 'string'
Indicator          62,  4, 21 '\"'
EndScalar          63,  4, 22 ''
Indicator          63,  4, 22 ','
LineBreak          64,  4, 23 '\n'
WhiteSpace         65,  5,  0 '      '
BeginScalar        71,  5,  6 ''
Indicator          71,  5,  6 '\"'
Text               72,  5,  7 'pattern'
Indicator          79,  5, 14 '\"'
EndScalar          80,  5, 15 ''
Indicator          80,  5, 15 ':'
WhiteSpace         81,  5, 16 ' '
BeginScalar        82,  5, 17 ''
Indicator          82,  5, 17 '\"'
Text               83,  5, 18 '^{[a-z0-9]{8}-([a-z0-9]{4}-){3}[a-z0-9]{12}}$'
Indicator         128,  5, 63 '\"'
EndScalar         129,  5, 64 ''
Indicator         129,  5, 64 ','
LineBreak         130,  5, 65 '\n'
WhiteSpace        131,  6,  0 '      '
BeginScalar       137,  6,  6 ''
Indicator         137,  6,  6 '\"'
Text              138,  6,  7 'example'
Indicator         145,  6, 14 '\"'
EndScalar         146,  6, 15 ''
Indicator         146,  6, 15 ':'
WhiteSpace        147,  6, 16 ' '
BeginScalar       148,  6, 17 ''
Indicator         148,  6, 17 '\"'
Text              149,  6, 18 '{f230aeb4-7d72-435b-8e12-b9240156e098}'
Indicator         187,  6, 56 '\"'
EndScalar         188,  6, 57 ''
LineBreak         188,  6, 57 '\n'
WhiteSpace        189,  7,  0 '    '
EndMapping        193,  7,  4 '}'
LineBreak         194,  7,  5 '\n'
WhiteSpace        195,  8,  0 '  '
EndMapping        197,  8,  2 '}'
LineBreak         198,  8,  3 '\n'
EndMapping        199,  9,  0 '}'